--- a/src/components/Weather/ToDoList/ToDoList.scss
+++ b/src/components/Weather/ToDoList/ToDoList.scss
@@ -1,34 +1,53 @@
-.ToDoList {
+.to-do-list {
   text-align: center;
+  padding: 20px;
+  background: rgba(255, 255, 255, 0.8);
+  border-radius: 10px;
+
+  &__input-container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+
+  &__input {
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+  }
+
+  &__button {
+    margin-left: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    background-color: #4CAF50;
+    color: white;
+    cursor: pointer;
+  }
+
+  &__list {
+    list-style-type: none;
+    padding: 0;
+  }
+
+  &__item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px 0;
+
+    &__text {
+      margin: 0 10px;
+      cursor: pointer;
+    }
+
+    &__delete-button {
+      margin-left: 10px;
+      border: none;
+      background: none;
+      cursor: pointer;
+      color: red;
+    }
+  }
 }
-
-input[type="text"] {
-  margin-right: 10px;
-}
-
-button {
-  margin-left: 5px;
-}
-
-ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-li {
-  margin: 5px 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-li span {
-  margin: 0 10px;
-  cursor: pointer;
-}
-
-li button {
-  margin-left: 10px;
-}
-
-
