--- a/src/components/Weather/News/News.scss
+++ b/src/components/Weather/News/News.scss
@@ -3,7 +3,9 @@
     padding: 20px;
     background: rgba(255, 255, 255, 0.8);
     border-radius: 10px;
+    margin-top: 1rem;
   }
+
 
   &__articles {
     display: flex;
