--- a/src/components/Weather/ToDoList/ToDoList.scss
+++ b/src/components/Weather/ToDoList/ToDoList.scss
@@ -1,8 +1,13 @@
 .to-do-list {
   text-align: center;
   padding: 20px;
+  margin-top: 1rem;
   background: rgba(255, 255, 255, 0.8);
   border-radius: 10px;
+
+  &__title {
+    font-size: 2.5rem;
+  }
 
   &__input-container {
     display: flex;
@@ -18,12 +23,13 @@
 
   &__button {
     margin-left: 10px;
-    padding: 10px;
+    padding: 8px;
     border-radius: 5px;
     border: none;
     background-color: #4CAF50;
     color: white;
     cursor: pointer;
+    
   }
 
   &__list {
