--- a/src/components/Weather/ToDoList/ToDoList.scss
+++ b/src/components/Weather/ToDoList/ToDoList.scss
@@ -4,6 +4,8 @@
   margin-top: 1rem;
   background: rgba(255, 255, 255, 0.8);
   border-radius: 10px;
+  margin-right: 20px;
+
 
   &__title {
     font-size: 2.5rem;
