--- a/src/components/Weather/News/News.scss
+++ b/src/components/Weather/News/News.scss
@@ -1,14 +1,21 @@
+
 .news {
   &__container {
+    margin-right: 20px;
     padding: 20px;
     background: rgba(255, 255, 255, 0.8);
     border-radius: 10px;
     margin-top: 1rem;
-  }
 
+  h1 {
+    font-size: 2rem;
+    margin-bottom: 20px;
+    }
+  }
 
   &__articles {
     display: flex;
+    margin-top: 20px;
     flex-direction: column;
     gap: 20px;
   }
